--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -574,10 +574,12 @@ pages={920-923}
 }
 
 @inproceedings{variableq1,
-author = {Schörkhuber, Christian and Klapuri, Anssi and Holighaus, Nicki and Doerfler, Monika},
-year = {2014},
-title = {A Matlab Toolbox for Efficient Perfect Reconstruction Time-Frequency Transforms with Log-Frequency Resolution},
-booktitle = {Proceedings of the AES International Conference}
+title = "A Matlab Toolbox for Efficient Perfect Reconstruction Time-Frequency Transforms with Log-Frequency Resolution,",
+author = "Christian Sch{\"o}rkhuber and Anssi Klapuri and Nicki Holighaus and Monika D{\"o}rfler",
+year = "2014",
+language = "English",
+booktitle = "AES 53rd International Conference on Semantic Audio, London, UK, January 27, 2014",
+publisher = "Audio Engineering Society",
 }
 
 @inproceedings{cqtseparation,
@@ -1578,4 +1580,13 @@ year = {2017},
 doi = {10.1121/1.4986647},
 URL = {https://doi.org/10.1121/1.4986647},
 eprint = {https://doi.org/10.1121/1.4986647}
+}
+
+@article{erblet,
+  title={The ERBlet transform: An auditory-based time-frequency representation with perfect reconstruction},
+  author={Thibaud Necciari and P. Bal{\'a}zs and Nicki Holighaus and Peter L. S{\o}ndergaard},
+  journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+  year={2013},
+  pages={498-502},
+  url={https://ltfat.org/notes/ltfatnote027.pdf}
 }
