--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -141,7 +141,7 @@ Both \textcite{variableq1} and \textcite{variableq2} cite the ERBlet transform (
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{./images-freqscales/vqlog.png}
-	\caption{Frequency bins and Q factors for the octave, log, and variable-Q scales}
+	\caption{Frequency bins and Q factors for the constant-Q/log and variable-Q scales}
 	\label{fig:vq}
 \end{figure}
 
