--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1590,3 +1590,13 @@ eprint = {https://doi.org/10.1121/1.4986647}
   pages={498-502},
   url={https://ltfat.org/notes/ltfatnote027.pdf}
 }
+
+@incollection{barktan,
+ booktitle={Handbook of Signal Processing in Acoustics},
+ editor={Havelock, David and Kuwano, Sonoko and Vorl{\"a}nder, Michael},
+ title={Estimation of Speech Intelligibility and Quality},
+ author={Voran, Stephen},
+ chapter={28},
+ year={2008},
+ publisher={Springer}
+}
